--- a/DPKitchenSink/DPKitchenSink/Popover/Popover.storyboard
+++ b/DPKitchenSink/DPKitchenSink/Popover/Popover.storyboard
@@ -20,7 +20,7 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="m03-Gz-XMR">
                                 <rect key="frame" x="0.0" y="44" width="375" height="734"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PopoverTableViewCell" id="aQi-pB-Mwc" customClass="PopoverTableViewCell" customModule="DPKitchenSink" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="1" width="375" height="44"/>
@@ -57,7 +57,7 @@
                                 </connections>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="ubR-yz-oIq" firstAttribute="trailing" secondItem="m03-Gz-XMR" secondAttribute="trailing" id="DeF-rP-Wfk"/>
                             <constraint firstItem="m03-Gz-XMR" firstAttribute="leading" secondItem="ubR-yz-oIq" secondAttribute="leading" id="Pan-yM-tmE"/>
